<resources>
    <string name="app_name">GoPHRit</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="unknown_profile">Unknown Profile</string>
    <string name="phase">Phase 2</string>
    <string name="generic_yes">YES</string>
    <string name="generic_no">NO</string>
    <string name="generic_ok">OK</string>
    <string name="activity_main_title">KR LPA</string>
    <string name="main_no_profile">No Profile Available</string>
    <string name="root_ds">Root DS</string>
    <string name="default_dp">Default DP</string>
    <string name="dialog_confirm_code_title">Confirmation Code</string>
    <string name="dialog_confirm_code_message">Please enter the confirmation code</string>
    <string name="dialog_reenter_code_message">Please re-enter the confirmation code</string>
    <string name="dialog_download_order_expired">Your download order has expired. Please contact your service
        provider</string>
    <string name="dialog_authenticate_client_failed">Client Authentication failed. Please ensure QR
        code used/data entered corresponds to current device and try again or contact your service provider</string>
    <string name="dialog_event_id_mismatch">Error while downloading profile automatically. Please contact your service
        provider.</string>
    <string name="dialog_error">Error</string>
    <string name="dialog_confirmation_code_retry_exceed">Maximum number of retries for confirmation code exceeded.
        Please contact your service provider.</string>
    <string name="dialog_profile_already_exists">Failed to install profile as it already exists</string>
    <string name="dialog_insufficient_memory_for_profile">Insufficient memory for profile.</string>
    <string name="dialog_profile_install_failed_interruption">Profile installation failed due to some interruption.</string>
    <string name="dialog_contact_service_provider">Please try again or contact your service provider</string>
    <string name="dialog_connectivity_warning_title">No Data Connectivity</string>
    <string name="dialog_connectivity_warning_message">Please verify your wifi/data connection. If you continue
        without data connectivity, the operation may fail.</string>
    <string name="dialog_connectivity_wearable_warning_title">No Watch Connectivity</string>
    <string name="dialog_connectivity_wearable_warning_message">Please verify your bluetooth connection.</string>
    <string name="dialog_euicc_memory_reset_title">Confirm eUICC memory reset</string>
    <string name="action_delete">Delete Profile</string>
    <string name="action_switch_device_watch">Switch to Watch</string>
    <string name="action_switch_device_mobile">Switch to Mobile</string>
    <string name="action_show_eid">Get EID</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reset_euicc_memory">Reset eUICC Memory</string>
    <string name="action_adv_options">Advance Options</string>
    <string name="action_switch_phase">Phase 2</string>
    <string name="activity_scanner_title">Scan QR Code</string>
    <string name="scanner_info">Place the QR Code inside the screen to scan it.</string>
    <string-array name="local_profile_operation_progress">
        <item>Still waiting for completion of operation&#8230;</item>
        <item>It is Taking Longer Time Than Usual. Please Continue Waiting&#8230;</item>
        <item>Executing this request is taking too long. Press Back Button to Dismiss This Dialog or continue
            waiting</item>
    </string-array>
    <string name="activity_profile_registry_title">Profile Registry</string>
    <string name="registry_provider">Provider</string>
    <string name="registry_nickname">Nickname</string>
    <string name="registry_profile_id">Profile Id</string>
    <string name="registry_iccid">ICCID</string>
    <string name="registry_state">State</string>
    <string name="registry_state_enabled">Enabled</string>
    <string name="registry_state_disabled">Disabled</string>
    <string name="registry_icon_type">Icon Type</string>
    <string name="registry_icon_type_jpg">JPG</string>
    <string name="registry_icon_type_png">PNG</string>
    <string name="registry_icon_type_unavailable">No Icon</string>
    <string name="registry_icon_type_unknown">Unknown</string>
    <string name="registry_icon_data">Icon Data</string>
    <string name="registry_ppr_info">Profile Policy Rules</string>
    <string name="registry_profile_class">Profile Class</string>
    <string name="registry_profile_class_provisioning">Provisioning Profile</string>
    <string name="registry_profile_class_test">Test Profile</string>
    <string name="registry_profile_class_operational">Operational Profile</string>
    <string name="activity_about_title">About</string>
    <string name="about_version">Version: %1$s</string>
    <string name="about_copyright">Copyright</string>
    <string name="about_license">About</string>
    <string name="activity_manual_entry_title">Enter Activation Code</string>
    <string name="entry_ac_format">AC Format</string>
    <string name="entry_smdp_address">SMDP Address</string>
    <string name="entry_matching_id">Matching ID</string>
    <string name="entry_smdp_id">SMDPid (Optional)</string>
    <string name="entry_confirmation_code_required">Confirmation Code Required</string>
    <string name="action_download">Download</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_generic">Error on %1$s. code %2$s</string>
    <string name="error_euicc_generic">Error on %1$s. Status Word: %2$s</string>
    <string name="error_euicc_successful_execution">Error on %1$s. Error code: %2$s</string>
    <string name="error_server_http">Error on %1$s. HTTP resultCode: %2$s</string>
    <string name="error_server_smds">Failed to download profile. Please try again</string>
    <string name="error_server_comm_failure">Error on %1$s. Failed to communicate with server. Please check your network connection and try again</string>
    <string name="error_server_execution_not_successful">Error on %1$s.
        %2$s|Subject:%3$s|Reason:%4$s|Id:%5$s|%6$s</string>
    <string name="error_delete_enabled_profile">Error. Profile is still enabled.</string>
    <string name="error_delete_profile_still_enabled">Unable to delete profile "%1$s" [%2$s] - Profile still
        enabled</string>
    <string name="euicc_reset_successful">eUICC memory reset completed successfully</string>
    <string name="euicc_reset_nothing_to_delete">No content to reset.</string>
    <string-array name="error_origins">
        <item>Unknown Origin</item>
        <item>Get Profiles Info</item>
        <item>Delete Profile</item>
        <item>Disable Profile</item>
        <item>Enable Profile</item>
        <item>Get RAT</item>
        <item>Set Nickname</item>
        <item>Get EID</item>
        <item>Reset eUICC memory</item>
        <item>Set default SMDP+ address</item>
        <item>Get eUICC Challenge</item>
        <item>Get eUICC configured address</item>
        <item>Get eUICC Info</item>
        <item>Initiate Authentication</item>
        <item>Verify Profile policy rules</item>
        <item>Prepare Download</item>
        <item>Get BPP</item>
        <item>Verify Profile MetaData</item>
        <item>Load Bound Profile Package</item>
        <item>Initialize Secure Channel</item>
        <item>Configure ISD-P</item>
        <item>Store Meta Data</item>
        <item>Replace Session Keys</item>
        <item>Load Profile Elements</item>
        <item>Seq of first 87 tlv</item>
        <item>Seq of second 87 tlv</item>
        <item>Seq of 88</item>
        <item>Seq of 86</item>
        <item>Handle Profile Installation Result</item>
        <item>Delete Profile Installation Result</item>
        <item>Auth Client</item>
        <item>Authenticate Server</item>
        <item>Retrieve Notification List</item>
        <item>Remove Notification Result</item>
        <item>Handle Notification</item>
        <item>List Notification</item>
        <item>Profile Download SMDS</item>
    </string-array>
    <string name="installation_success_title">Profile installed</string>
    <string name="installation_fail_title">Profile not installed</string>
    <string name="installation_fail_content">Please try again</string>
    <string name="delete_success_title">Profile Deleted</string>
    <string name="delete_fail_title">Delete Fail</string>
    <string name="profile_switch_state_success_title">%1$s Success</string>
    <string name="profile_switch_state_fail_title">%1$s Fail</string>
    <string name="please_wait">Please wait ...</string>
    <string name="dialog_euicc_memory_reset">Are you sure you want to reset eUICC Memory?</string>
    <string name="refresh_ongoing_while_get_profile">SIM not ready.Unable to load profile. Please try to reload the profiles
        again</string>
    <string name="refresh_ongoing_while_delete_profile">SIM not ready.Unable to delete profile.Please try again later.</string>
    <string name="refresh_ongoing_while_memory_reset">SIM not ready. Please try again later</string>
    <string name="euicc_busy_while_memory_reset">SIM busy. Please try again later</string>
    <string name="euicc_busy_switch_profile">SIM busy. Please try again later</string>
    <string name="enter_value">Enter a value</string>
    <string name="default_smdp_address">Default SM-DP+ address</string>
    <string name="root_smds_address">Root SM-DS address</string>
    <string name="set_default_smds_successful">Default SM-DP address updated successfully</string>
    <string name="set_root_smds_successful">Root SM-DS address updated successfully</string>
    <string name="value_not_available">Not available</string>
    <string-array name="ppr_ids">
        <item></item>
        <item>Disabling of this Profile is not allowed</item>
        <item>Deletion of this Profile is not allowed</item>
        <item>Deletion of this Profile is required upon its successful disabling</item>
    </string-array>
    <string name="user_consent_message">The subscription you are about to install is configured as follows:%s</string>
    <string name="user_consent_rejected">Cancelling request.Please wait...</string>
    <string name="user_consent_accept">Accept</string>
    <string name="action_esimprov">Esimprov</string>
    <string name="action_poweron_discover_profile">Discover Profile</string>
    <string name="title_mifi_usage">Explore</string>
    <string name="title_mifi_rates">Discover</string>
    <string name="title_mifi_home">Go</string>
    <string name="title_mifi_packages">Manage</string>
    <string name="title_mifi_more">More</string>
    <string name="top_subtitle_mifi_home_active_package">SIM Card Profile</string>
    <string name="center_subtitle_mifi_home_active_package">Tap button below to send broadcast</string>
    <string name="mifi_more_refer_a_friend">Refer a Friend</string>
    <string name="mifi_more_account">Account</string>
    <string name="mifi_more_help">Help</string>
    <string name="actions_fragment_0_title_1">GoPHRit</string>
    <string name="actions_fragment_0_title_2">Check GoPHRit Stats</string>
    <string name="actions_fragment_0_title_2_tooltip">Refresh Stats</string>
    <string name="actions_fragment_0_title_3">GoPHRit Account Balance</string>
    <string name="actions_fragment_0_title_4">Please topup your GoPHRit token balance</string>
    <string name="actions_fragment_0_title_5">Current Balance : 40 tokens</string>
    <string name="actions_fragment_0_title_6">Topup Account Balance</string>
    <string name="actions_fragment_0_title_7">Buy RNDflo Tokens</string>
</resources>