<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ScrollView
        android:id="@+id/download_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/download_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/acformat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entry_ac_format"
                    android:imeActionId="@+id/acformat"
                    android:imeActionLabel="@string/next"
                    android:inputType="number"
                    android:maxLines="1"
                    tools:text="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/smdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entry_smdp_address"
                    android:imeActionId="@+id/smdp"
                    android:imeActionLabel="@string/next"
                    android:inputType="textUri"
                    tools:text="smdp"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/actoken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entry_matching_id"
                    android:imeActionId="@+id/actoken"
                    android:imeActionLabel="@string/next"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="2"
                    tools:text="04386-AGYFT-A74Y8-3F815"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/smdpid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entry_smdp_id"
                    android:imeActionId="@+id/smdpid"
                    android:imeActionLabel="@string/next"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="2"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry_confirmation_code_required" />

            <Button
                android:id="@+id/download_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_download"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
