<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_9"
    android:orientation="vertical">

    <!-- top_panel start -->
    <RelativeLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_theme_cello_60percent"
        >

        <TextView
            android:id="@+id/top_panel_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mifi_margin_top"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/actions_fragment_0_title_1"
            android:textColor="@color/white"
            android:textSize="@dimen/huge_text_size"
            tools:text="@string/actions_fragment_0_title_1"
            />

        <TextView
            android:id="@+id/top_panel_subtitle"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_panel_title"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lato"
            android:layout_marginTop="@dimen/mifi_margin_vertical"
            android:gravity="center"
            android:text="@string/actions_fragment_0_title_2"
            android:textColor="@color/white"
            android:textSize="@dimen/huge_text_size"
            tools:text="@string/center_subtitle_mifi_home_active_package"
            />

        <Button
            android:id="@+id/button_plan_enable"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/mifi_margin_vertical"
            android:layout_marginBottom="@dimen/cooper_widget_margin_bottom"
            android:layout_below="@id/top_panel_subtitle"
            android:layout_width="@dimen/mifi_button_cta_width"
            android:layout_height="@dimen/mifi_button_cta_height"
            android:background="@drawable/rounded_button_mifi_default"
            android:textColor="@color/white"
            android:onClick="onAddCreditButtonClick"
            android:text="@string/actions_fragment_0_title_2_tooltip"
            />

    </RelativeLayout>

    <!-- top_panel end -->
    <!-- center_panel start -->

    <RelativeLayout
        android:id="@+id/center_panel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/top_panel"
        android:background="@color/default_theme_cello_70percent"
        >

        <TextView
            android:id="@+id/center_panel_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mifi_margin_top"
            android:gravity="center"
            android:fontFamily="@font/lato"
            android:textColor="@color/white"
            android:textSize="@dimen/huge_text_size"
            android:text="@string/actions_fragment_0_title_3"
            tools:text="@string/actions_fragment_0_title_3"
            />

        <TextView
            android:id="@+id/center_panel_subtitle"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/center_panel_title"
            android:fontFamily="@font/lato_thin"
            android:layout_marginTop="@dimen/mifi_margin_vertical"
            android:gravity="center"
            android:text="@string/actions_fragment_0_title_4"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            tools:text="@string/top_subtitle_mifi_home_active_package"
            />

        <TextView
            android:id="@+id/center_panel_button_label"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/center_panel_subtitle"
            android:fontFamily="@font/lato_thin"
            android:layout_marginTop="@dimen/mifi_margin_vertical"
            android:gravity="center"
            android:text="@string/actions_fragment_0_title_5"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            tools:text="@string/top_subtitle_mifi_home_active_package"
            />

        <LinearLayout
            android:id="@+id/packages_remaining_bar_chart_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cooper_widget_height"
            android:gravity="center"
            android:layout_below="@id/center_panel_button_label"
            android:layout_marginBottom="@dimen/cooper_widget_margin_bottom"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/mifi_margin_vertical"
            android:orientation="horizontal"


            >
            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:paddingRight="8dp"
                android:visibility="gone"
                android:src="@drawable/esimprov_power_button" />


            <TextView
                android:id="@+id/chart_subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/lato_thin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="left"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:text="Off"
                tools:text="48 hours remaining"
                />

<!--            <com.rndflo.mobile.views.HorizontalProgressBarView
                android:id="@+id/package_remaining_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                app:backgroundColor="@color/black_20percent"
                app:gradientEndColor="@color/mifi_bar_end_color"
                app:gradientStartColor="@color/mifi_bar_start_color"/>-->



        </LinearLayout>
    </RelativeLayout>
    <!-- center_panel end -->


    <!-- bottom_panel start -->
    <RelativeLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_panel"
        android:background="@color/default_theme_cello_80percent"
        >

        <Button
            android:id="@+id/manage_esim"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/mifi_margin_top"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/london_square_corners_button_drawable"
            android:text="@string/actions_fragment_0_title_6"
            android:onClick="onCooperHomeFragmentManageButtonClick"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/download_esim_profile"
            android:layout_width="match_parent"
            android:layout_below="@id/manage_esim"
            android:layout_marginTop="@dimen/mifi_margin_top"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/london_square_corners_button_drawable"
            android:text="@string/actions_fragment_0_title_7"
            android:onClick="onCooperHomeFragmentDownloadButtonClick"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/download_next_profile"
            android:layout_width="match_parent"
            android:layout_below="@id/download_esim_profile"
            android:layout_marginTop="@dimen/mifi_margin_top"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/london_square_corners_button_drawable"
            android:text="Download new SIM Profile"
            android:onClick="onCooperHomeFragmentDownloadButtonClick"
            android:textColor="@color/white"
            android:visibility="invisible"
            />

    </RelativeLayout>
    <!-- bottom_panel end -->
</RelativeLayout>

